# HUXt

./: .gitignore  HUXt_OMNI_example.py  MEMORY_LAYOUT_ANALYSIS.md  PLUTO_SETUP.md  Performance benchmarks.txt  README.md  changelog.md  enlil_hourly_data.csv  enlil_hourly_data.pkl  environment.yml  pyproject.toml  requirements.txt  surf_2019_2022_data.pkl  surf_2019_data.pkl  surf_2022_data.pkl  test_compressible_methods.py  test_output.txt  test_particle_indexing.py  test_solver_vs_parker.py  test_streak_cgf.py  todo.txt
.ipynb_checkpoints/: README-checkpoint.md  changelog-checkpoint.md  environment-checkpoint.yml  requirements-checkpoint.txt
SURF_paper_plots/: CME_comparison.py  CME_density_temperature_example_plot.py  PUI_test.py  analyze_omni_relations.py  compare_WSA-ENLIL_OMNI.py  huxt_OMNI_demo.py  huxt_quickrun_test.py  insitu-SURF_ambient.py  new_horizons.py  plot_InSituSURF_SolO.py  plot_test.py  reproduce_fri3d_figure6.py  solar_wind_speed_density_temp.py  test_huxt_fluxrope.py  test_huxt_vs_parker.py  uranus.py
code/: HUXt.py  HUXt_OMNI.py  HUXt_example.ipynb  HUXt_example.py  HUXt_examples.ipynb  HUXt_getinput.py  HUXt_sidereal.py  HUXtensembles.py  HUXtinput.py  HUXtlat.py  Untitled.ipynb  anim_test.ipynb  cone2bc.in  cone_cme_file_input_test.ipynb  convergence_testing.ipynb  example_HUXt.py  example_HUXt_OMNI.py  example_HUXt_sidereal.py  huxt.py  huxt_analysis.py  huxt_ensembles.py  huxt_ensembles_PFSSdemo.py  huxt_ensembles_PFSSdemo_CME.py  huxt_inputs.py  huxt_time_dependent_input.py  test_huxt.py  tmp0ngxqg9t  tmpqozne6jc  tmpyr02ozfp
code/.ipynb_checkpoints/: HUXt-checkpoint.py  HUXt_example-checkpoint.ipynb  Untitled-checkpoint.ipynb  cone_cme_file_input_test-checkpoint.ipynb  huxt_analysis-checkpoint.py  huxt_inputs-checkpoint.py
code/.pylint.d/: HUXt1.stats
conda.recipe/: meta.yaml
data/: .gitignore
data/boundary_conditions/: CR1625.hdf5  CR1626.hdf5  CR1627.hdf5  CR1628.hdf5  CR1629.hdf5  CR1630.hdf5  CR1633.hdf5  CR1634.hdf5  CR1636.hdf5  CR1638.hdf5  CR1642.hdf5  CR1643.hdf5  CR1644.hdf5  CR1645.hdf5  CR1646.hdf5  CR1647.hdf5  CR1648.hdf5  CR1649.hdf5  CR1650.hdf5  CR1651.hdf5  CR1652.hdf5  CR1653.hdf5  CR1654.hdf5  CR1655.hdf5  CR1656.hdf5  CR1657.hdf5  CR1658.hdf5  CR1659.hdf5  CR1660.hdf5  (+538 more)
debug/: .gitignore  CACHE_EFFICIENCY_ANALYSIS.md  CONSERVATIVE_CONVERSION_GUIDE.md  CONSERVATIVE_HLL_IMPLEMENTATION_STATUS.md  CONSERVATIVE_SOLVER_LIMITATIONS.md  FINAL_SOLVER_STATUS.md  FORTRAN_MEMORY_LAYOUT_OPTIMIZATION.md  HLL_IMPLEMENTATION_GUIDE.md  IMPLEMENTING_HLL_FLUX_SOLVER.md  INTEGRATING_PLUTO_SOLVER.md  LICENSE.md  MEMORY_LAYOUT_ANALYSIS.md  PARALLELIZATION_SUMMARY.md  PARALLEL_EXECUTION_FIX.md  PHASE1_OPTIMIZATIONS.md  PHASE2_REVERTED_NOTES.md  PLUTO_CONSERVATIVE_METHODS.md  PLUTO_INTEGRATION_SUMMARY.md  PLUTO_QUICK_REFERENCE.md  PLUTO_SOLVER_IMPLEMENTATION.md  PLUTO_SOLVER_USAGE.md  README.md  README_PLUTO_SOLVER.md  README_SUNPY_HANG.md  SOLVER_FLAG_DOCUMENTATION.md  SPHERICAL_GEOMETRY_ISSUE.md  VELOCITY_DEPENDENT_CONDITIONS.md  changelog.md  sunRunner1D_method_summary.md  test_imports.py
huxt/: HelioMAS_CR2120_vr_r0.hdf  __init__.py  cgf_solver.py  compressible_solvers.py  huxt.py  huxt_analysis.py  huxt_fluxrope.py  huxt_inputs.py  huxt_insitu.py  huxt_solver_cgf.py  huxt_solver_pluto.py  huxt_solver_upwind.py  huxt_solvers.py  pluto_wrapper.py  pyro_custom_bc_wrapper.py  solar_wind_pyro_solver.py  test_huxt.py
notebooks/: HUXt_examples.ipynb
scripts/: generate_huxt_ephemeris.py  generate_reference_data.py
surf/: __init__.py  surf.py  surf_analysis.py  surf_inputs.py  surf_insitu.py  surf_solvers.py
tests/: analyze_omni_relations.py  benchmark_cgf_parallel.py  compare_parker_nozzle.py  debug_mass_correction.py  debug_step_details.py  diagnose_cgf_2d.py  diagnose_continuity.py  generate_reference_data.py  huxt_quickrun_test.py  inputs.auto  omni_lookup_table_01AU.txt  plot_test.py  scratch.py  scratch2.py  solver_comparison.py  test_cgf_comparison.py  test_cgf_optimization.py  test_cgf_parker_spinup.py  test_cgf_particles.py  test_cgf_performance.py  test_cgf_simple.py  test_gamma_values_alpha0.py  test_huxt.py  test_interior_conservation.py  test_mass_conservation.py  test_minimal.py  test_one_timestep.py  test_parallelization.py  test_pluto_solver.py  test_solve_radial_cgf.py  test_solver_vs_parker.py
(+81 files in other folders)
