[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surf"
version = "1.0.0"
description = "Space-weather Utilities for Research adn Forecasting (SURF)"
readme = "README.md"
authors = [
  {name = "Luke Barnard", email = "l.a.barnard@reading.ac.uk" },
  {name = "Mathew Owens", email = "m.j.owens@reading.ac.uk" },
]
license-files = ["LICENSE.md"]
requires-python = ">=3.12.11"
dependencies = [
  "astropy>=7.1.0",
  "dtaidistance>=2.3.13",
  "h5py>=3.14.0",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "joblib>=1.3.0",
  "jupyterlab>=4.4.7",
  "matplotlib>=3.10.6",
  "netcdf4>=1.6.2",
  "numba>=0.61.2",
  "numpy>=2.2.6",
  "onnxruntime>=1.15.0",
  "pandas>=2.3.2",
  "pytest>=8.4.2",
  "requests>=2.32.5",
  "scipy>=1.16.1",
  "sunpy>=7.0.1",
  "tqdm>=4.67.1"
]

[tool.setuptools.package-data]
"surf.data.ephemeris" = ["*.hdf5"]
"surf.data.example_inputs" = ["*.fits", "*.in", "*.fits", "*.nc", "*.dat"]
"surf.data.example_inputs.WSA_GONGZ" = ["*.fits"]
"surf.notebooks" = ["*.ipynb"]

[project.scripts]
surf-make-ephemeris = "surf.scripts.make_ephemeris:main"
surf-open-examples = "surf.scripts.open_examples_notebook:main"

[project.urls]
Homepage = ""
Repository = ""
Issues = ""