[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huxt"
version = "5.0.3"
description = "Heliospheric Upwind eXtrapolation with Time-dependence. A computationally efficient solar wind model."
readme = "README.md"
authors = [
  {name = "Luke Barnard", email = "l.a.barnard@reading.ac.uk" },
  {name = "Mathew Owens", email = "m.j.owens@reading.ac.uk" },
]
license-files = ["LICENSE.md"]
requires-python = ">=3.12.11"
dependencies = [
  "appdirs>=1.4.4",
  "astropy>=7.2.0",
  "dtaidistance>=2.4.0",
  "h5py>=3.16.0",
  "httplib2>=0.31.2",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "jupyterlab>=4.5.7",
  "matplotlib>=3.10.9",
  "netcdf4>=1.7.4",
  "numba>=0.65.1",
  "numpy>=2.4.4",
  "pandas>=3.0.3",
  "pytest>=9.0.3",
  "requests>=2.34.1",
  "scipy>=1.17.1",
  "sunpy[all]>=7.1.2",
  "tqdm>=4.67.3"
]

[tool.setuptools.package-data]
"huxt.data.ephemeris" = ["*.hdf5"]
"huxt.data.example_inputs" = ["*.fits", "*.in", "*.fits", "*.nc", "*.dat"]
"huxt.data.example_inputs.WSA_GONGZ" = ["*.fits"]
"huxt.notebooks" = ["*.ipynb"]

[project.scripts]
huxt-make-ephemeris = "huxt.scripts.make_ephemeris:main"
huxt-open-examples = "huxt.scripts.open_examples_notebook:main"

[project.urls]
Homepage = "https://github.com/University-of-Reading-Space-Science/HUXt"
Repository = "https://github.com/University-of-Reading-Space-Science/HUXt.git"
Issues = "https://github.com/University-of-Reading-Space-Science/HUXt/issues"